# oned

./: .bazelrc  .gitignore  AUTHORS  BENCHMARK.mb  BENCHMARK.md  BENCHMARK_before.mb  BENCHMARK_beforeXORSIMD.md  LICENSE  MODULE.bazel  README.md  run_all_benchmarks.sh
.github/workflows/: test.yml
oned/: BUILD.bazel  chunks.hpp  data_container.hpp  delta.hpp  runlength.hpp  simple8b.hpp  stripe.hpp  xor.hpp
oned/bench/: BUILD.bazel  chunks_bench.cc  data_container_bench.cc  delta_bench.cc  runlength_bench.cc  simple8b_bench.cc  stripe_bench.cc  xor_bench.cc
oned/examples/: BUILD.bazel  chunks_example.cc  data_container_example.cc  delta_example.cc  led_example.cc  runlength_example.cc  simple8b_example.cc  stripe_example.cc  xor_example.cc
oned/test/: BUILD.bazel  chunks_test.cc  data_container_test.cc  delta_test.cc  runlength_test.cc  simple8b_test.cc  stripe_test.cc  xor_test.cc
