# Copyright (c) 2024 The OneD Authors
# See LICENSE file.

cc_binary(
    name = "delta_bench",
    srcs = ["delta_bench.cc"],
    deps = ["@google_benchmark//:benchmark","//oned:delta"],
    copts = ["--std=c++20"],
)

cc_binary(
    name = "chunks_bench",
    srcs = ["chunks_bench.cc"],
    deps = ["@google_benchmark//:benchmark","//oned:stripe","//oned:chunks"],
    copts = ["--std=c++20"],
)
